--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -12,3 +12,9 @@
 /morgan.jpeg
 /sawing-wood-daniel_simon.wav
 /snare.jpg
+/drum.jpg
+/drum2.jpg
+/KimNamjoon.png
+/Tzuyu.jpeg
+/KimNamjoon.jpg
+/Billie.jpg
