--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,20 +1,1 @@
-/Recipes.html
-/arnold.jpeg
-/cymbal.jpg
-/cymbal.wav
-/drum.wav
-/extra/
-/homer-woohoo.wav
-/jack.jpeg
-/jackInTheBox.png
-/java.png
-/leonardo.jpeg
-/morgan.jpeg
-/sawing-wood-daniel_simon.wav
-/snare.jpg
-/drum.jpg
-/drum2.jpg
-/KimNamjoon.png
-/Tzuyu.jpeg
-/KimNamjoon.jpg
-/Billie.jpg
+/Jennie.jpeg
