Finished Mod 0 Eclipse

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,24 @@
+/Billie.jpg
 /Jennie.jpeg
+/Recipes.html
+/Tzuyu.jpeg
+/arnold.jpeg
+/cymbal.jpg
+/cymbal.wav
+/drum.jpg
+/drum.wav
+/drum2.jpg
+/extra/
+/homer-woohoo.wav
+/jack.jpeg
+/jackInTheBox.png
+/java.png
+/leonardo.jpeg
+/morgan.jpeg
+/sawing-wood-daniel_simon.wav
+/snare.jpg
+/README.MD
+/heavy-rain-daniel_simon.wav
+/labrador-barking-daniel_simon.wav
+/service-bell_daniel_simion.wav
+/labrador-barking-daniel_simon2.wav
